--- a/templates/maininterface.html
+++ b/templates/maininterface.html
@@ -3,12 +3,20 @@
 <title>MMU ECAL | MAIN</title>
 <head>
     <h1><b>LOG IN</b></h1>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="/static/style.css"/>
+   
 </head>
+
 <body>
     <form method="POST" autocomplete="off">
     <label for="ID" class="ID_form">ID:</label>
      <input type="ID" name="ID">
      <input type="submit">
+     <section class="header">
+        <nav>
+           
+        </nav>
+
+     </section>
 </body>
 </html>
