--- a/website/templates/changepassword.html
+++ b/website/templates/changepassword.html
@@ -3,10 +3,29 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" href="/static/404.css">
     </head>
 
     <h1> CHANGE PASSWORD PAGE</h1>
+
+    {{ form.hidden_tag() }}
+
+    <div class="mb-3">
+        <label for="exampleInputEmail" class="form-label"> {{ form.current_password.label }}</label>
+        {{ form.current_password }}
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleInputEmail" class="form-label"> {{ form.new_password.label }}</label>
+        {{ form.new_password }}
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleInputEmail" class="form-label"> {{ form.confirm_new_password.label }}</label>
+        {{ form.confirm_new_password }}
+    </div>
+
+    {{ form.change_password }}
+
     <body>
      
 </html>
