--- a/website/templates/guest_home.html
+++ b/website/templates/guest_home.html
@@ -27,14 +27,14 @@
         <li><a href="#">STEP COUNTER</a></li>
       </ul>
       <div class="nav__btns">
-        <a href="/login"><button class="btn" ><i class="ri-contract-right-line"></i></button></a>
+        <a href="/userauth"><button class="btn" ><i class="ri-contract-right-line"></i></button></a>
       </div>
     </nav>
     <div class="container">
       <div class="container__left">
         <h1>All You Need</h1>
         <div class="container__btn">
-          <a href="/login"><button class="btn">JOIN US NOW</button></a>
+          <a href="/userauth"><button class="btn">JOIN US NOW</button></a>
         </div>
       </div>
       <div class="container__right">
