--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -13,7 +13,16 @@
            placeholder="Enter ID"
         />
     </div>
-
+    <div class="form-group"></div>
+    <label for="username">Enter Username</label>
+        <input 
+           type="text" 
+           class="form-control" 
+           id="username" 
+           name="username" 
+           placeholder="Enter Username"
+        />
+    </div>
     <div class="form-group">
         <label for="password1">Enter Password</label>
         <input 
@@ -35,6 +44,7 @@
            placeholder="Confirm Password"
         />
     </div>
+
 
 <br />
 <button type = "submit" class="btn btn-primary">Submit</button>
