--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -9,5 +9,30 @@
     <body>
         <h1>profile</h1>
         <a href="/change-password">CHANGE PASSWORD</a>
+        <body>
+            <h2>Your daily calories intake counter</h2>
+            <form action="{% url 'calorie_counter' %}" method="post">
+              <label for="weight">Please enter your weight (kg):</label>
+              <input type="number" id="weight" name="weight"><br>
+              <label for="height">Please enter your height (cm):</label>
+              <input type="number" id="height" name="height"><br>
+              <label for="age">Please enter your age:</label>
+              <input type="number" id="age" name="age"><br>
+              Gender:
+              <input type="radio" name="gender" value="female">Female
+              <input type="radio" name="gender" value="male">Male
+              <br>
+              <label for="activity">Choose your activity level:</label>
+              <input list="activities" name="activity" id="activity">
+              <datalist id="activities">
+                <option value="sedentary">
+                <option value="lightly active">
+                <option value="moderately active">
+                <option value="very active">
+              </datalist>
+              <br>
+              <input type="submit" value="Calculate">
+            </form>
+          </body>
     </body>
 </html>
