--- a/templates/stepburner.html
+++ b/templates/stepburner.html
@@ -14,7 +14,7 @@
             <a href="#">MMU E-CAL</a>
           </div>
           <div class="nav__back" id="menu-back">
-              <i class="ri-corner-down-left-line"></i>
+              <a href="/home"><i class="ri-corner-down-left-line"></i></a>
           </div>
         </div>
     </nav>
