--- a/templates/stepburner.html
+++ b/templates/stepburner.html
@@ -19,7 +19,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Calorie Calculator</h1>
+        <h1>Never Lose Track Of Your Journey!!!</h1>
         <form action="" method="post">
             <label for="start_point">Start Point:</label>
             <select id="start_point" name="start_point">
