--- a/website/templates/foodorder.html
+++ b/website/templates/foodorder.html
@@ -39,6 +39,7 @@
                         <h5>{{ food.product_name }}</h5>
                         <h5 class="price">RM {{ food.product_price }}</h5>
                         <h6 class="stock">{{ food.in_stock }} available </h6>
+                        <h6 class="calorie">{{ food.product_calorie }} calories </h6>
                     </div>
                     <p>Food details</p>
                     <a  href="/cart/{{ food.id }}" ><button>Add to Cart</button></a>
