--- a/website/templates/logsign.html
+++ b/website/templates/logsign.html
@@ -4,22 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/logsign.css">
+    <link rel="stylesheet" href="static/logsign.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" ></script>
+
+
+    <script src="https://kit.fontawesome.com/e24507d923.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" />
+
     <title>MMU E-CAL | Log In Sign In</title>
 </head>
 
 <body>
 
+
     <div class="container" id="container">
         <div class="form-container sign-up">
             <form action="{{ url_for('auth.userauth') }}" method="POST">
                 <h1>Create Your Account</h1>
-                <span>Use your MMU ID, MMU IS YOU</span>
                 <input type="hidden" name="action" value="signup">
                 <input type="text" placeholder="MMU ID" id="student_id" name="student_id" required>
                 <input type="text" placeholder="Create Username" id="username" name="username" required>
                 <input type="password" placeholder="Create Password" id="password1" name="password1" required >
                 <input type="password" placeholder="Confirm Password" id="password2" name="password2" required>
+                <input type="test" placeholder="Weight" id="weight" name="weight" required>
+                <input type="text" placeholder="Height" id="height" name="height" required>
+                <input type="text" placeholder="Age" id="age" name="age" required>
+                <label for="gender">Gender</label>
+                <select id="gender" name="gender">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+                <label for="activity_level">Activity Level</label>
+                <select id="activity_level" name="activity_level">
+                    <option value="sedentary">Sedentary</option>
+                    <option value="lightly_active" >Lightly Active</option>
+                    <option value="moderately_active" >Moderately Active</option>
+                    <option value="very_active" >Very Active</option>
+                </select>
                 <button type="submit">Sign Up</button>
             </form>
         </div>
@@ -49,7 +72,7 @@
         </div>
     </div>
 
-    <script src="/static/logsign.js"></script>
+    <script src="static/logsign.js"></script>
 </body>
 
 </html>
