css for change password and order history

--- a/website/templates/changepassword.html
+++ b/website/templates/changepassword.html
@@ -2,30 +2,41 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/static/changepassword.css"/>
+        <title>Change Password</title>
     </head>
 
-    <h1> CHANGE PASSWORD PAGE</h1>
-
-    {{ form.hidden_tag() }}
-
-    <div class="mb-3">
-        <label for="exampleInputEmail" class="form-label"> {{ form.current_password.label }}</label>
-        {{ form.current_password }}
-    </div>
-
-    <div class="mb-3">
-        <label for="exampleInputEmail" class="form-label"> {{ form.new_password.label }}</label>
-        {{ form.new_password }}
-    </div>
-
-    <div class="mb-3">
-        <label for="exampleInputEmail" class="form-label"> {{ form.confirm_new_password.label }}</label>
-        {{ form.confirm_new_password }}
-    </div>
-
-    {{ form.change_password }}
-
     <body>
+        <div class="container">
+
+            <h1>CHANGE PASSWORD PAGE</h1>
+            
+            <div class="form-container">
+                {{ form.hidden_tag() }}
+            
+                <div class="mb-3">
+                    <label for="exampleInputEmail" class="form-label">{{ form.current_password.label }}</label>
+                    {{ form.current_password }}
+                </div>
+            
+                <div class="mb-3">
+                    <label for="exampleInputEmail" class="form-label">{{ form.new_password.label }}</label>
+                    {{ form.new_password }}
+                </div>
+            
+                <div class="mb-3">
+                    <label for="exampleInputEmail" class="form-label">{{ form.confirm_new_password.label }}</label>
+                    {{ form.confirm_new_password }}
+                </div>
+            
+                {{ form.change_password }}
+            </div>
+
+        </div>
+        
+    </body>
+
+    
      
 </html>
