--- a/website/templates/order_history.html
+++ b/website/templates/order_history.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/static/order_history.css"/>
+    <title>Order History</title>
+</head>
+<body>
+    <nav>
+        <div class="nav__header">
+            <div class="nav__logo">
+                <a href="#">MMU E-CAL</a>
+            </div>
+            <div class="nav__back" id="menu-back">
+                <a href="/profile"><i class="ri-corner-down-left-line"></i></a>
+            </div>
+        </div>
+    </nav>
 
-<h1>Order History</h1>
+    <div class="title">
+        <h1>Order History</h1>
+    </div>
 
-{% for date, orders in order_grouped.items() %}
-<h2>{{ date }}</h2>
-<ul>
-    {% for order in orders %}
-    <li>Item : {{ order.product_name }} ({{order.quantity }}) Price : RM {{ order.price }} Calories : {{ order.calories }}  </li>
-    {% endfor %}
-    <li><strong>Total Prices : RM {{ total_prices[date] }}</strong></h4></li>
-    <li><strong> Calories : {{ total_calories[date] }} kcal</strong></h4></li>
-    </ul>
-    {% endfor %}
-
-  
-    
-
-
+    <div class="container">
+        {% for date, orders in order_grouped.items() %}
+            <div class="day-box">
+                <h2>{{ date }}</h2>
+                <div class="activity-details">
+                    <div class="activity-item">
+                        <ul>
+                            {% for order in orders %}
+                            <li>Item : {{ order.product_name }} ({{order.quantity }}) Price : RM {{ order.price }} Calories : {{ order.calories }}  </li>
+                            {% endfor %}
+                            <li><strong>Total Prices : RM {{ total_prices[date] }}</strong></h4></li>
+                            <li><strong> Calories : {{ total_calories[date] }} kcal</strong></h4></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</body>
+</html>
