--- a/website/static/style_profile.css
+++ b/website/static/style_profile.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 *{
     margin: 0;
     padding: 0;
@@ -78,7 +79,7 @@
 .profile-buttom{
     background: white;
     color: #999;
-    padding: 60px 0;
+    padding: 30px 0;
     margin-right: -70px;
     margin-left: -70px;
     border-radius: 20px;
