--- a/website/templates/logsign.html
+++ b/website/templates/logsign.html
@@ -33,15 +33,15 @@
                 <input type="text" placeholder="Age" id="age" name="age" required>
                 <label for="gender">Gender</label>
                 <select id="gender" name="gender">
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
                 </select>
                 <label for="activity_level">Activity Level</label>
                 <select id="activity_level" name="activity_level">
-                    <option value="sedentary">Sedentary</option>
-                    <option value="lightly_active" >Lightly Active</option>
-                    <option value="moderately_active" >Moderately Active</option>
-                    <option value="very_active" >Very Active</option>
+                    <option value="Sedentary">Sedentary</option>
+                    <option value="Lightly Active" >Lightly Active</option>
+                    <option value="Moderately Active" >Moderately Active</option>
+                    <option value="Very Active" >Very Active</option>
                 </select>
                 <button type="submit">Sign Up</button>
             </form>
