--- a/website/templates/updatefood.html
+++ b/website/templates/updatefood.html
@@ -6,6 +6,7 @@
             <th scope="'col">Product Name</th>
             <th scope="'col">Price</th>
             <th scope="'col">In Stock</th>
+            <th scope="'col">Calorie</th>
             <th scope="'col">Picture</th>
             <th scope="'col"></th>
         </tr>
@@ -18,6 +19,7 @@
                 <td>{{ form.product_name }}</td>
                 <td>{{ form.product_price }}</td>
                 <td>{{ form.in_stock }}</td>
+                <td>{{ form.product_calorie }}</td>
                 <td>{{ form.product_picture }}</td>
                 <td>{{ form.update_product }}</td>
             </form>
