fixed steps accumulated

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -30,7 +30,7 @@
 
               <br>
               
-              <p>You're At <strong>{{ total_steps_accumulated[current_date.strftime("%Y/%m/%d")] }}</strong> / 10000 steps</p>
+              <p>You're At <strong>{{ total_steps_accumulated[current_date] }}</strong> / 10000 steps</p>
        
               <br>
               <p>To Maintain <strong>{{ user.weight }} Kg</strong>,</p> 
